--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira Mono"
+      rel="stylesheet"
+    />
     <title>React</title>
   </head>
   <body>
